--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "node-fetch": "^2.6.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17"
   }
 }
